src/styles/Nav.css
.nav_container{
    width: 100vw;
    padding-inline: 10rem;
    height: 6rem;
    background: transparent;
    display: flex;
    justify-content: space-between;
    align-items: center;
    /* margin-top: 1rem; */
    z-index: 9999;
    position: fixed;
    top: 0;
    /* padding-inline: 10rem ; */
}
.nav__menu{
    /* color: #fff; */
    font-size: 1.5rem;
    cursor: pointer;
    mix-blend-mode: difference;
}
.menu{
    mix-blend-mode: difference;
}
.nav__ul{
    width: 100%;
    /* height: 40vh; */
    background-color: #fff;
    position: absolute;
    left: 0;
    top: 0;
    padding: 4rem 2rem;
    transform: translateY(-40vh);
    transition: transform 1s ease-in-out;

}
/* .link_cover{
    position: relative;
    overflow: hidden;
} */
.nav__open{
    transform: translateY(0);
    transition: transform 1s ease-in-out;
}
.ul__nav_upper{
    display: flex;
    width: 100%;
    justify-content: space-between;
}
.links__wrapper{
    gap: 2rem;
    display: flex;
    width: 40%;
    flex-wrap: wrap;
}
.nav__links__item{
    font-size: 3rem;
    text-decoration: none;
    color: #000;
    font-weight: 300;
}
.nav__links_fillers{
    display: flex;
    position: absolute;
    width: 93%;
    justify-content: space-between;
    align-items: center;
    bottom: 0;
    gap: 2rem;
    margin: 1rem 0;

}
.nav__links_span_wrapper{
    display: flex;
    gap: 1rem;
}
.nav__links_filler_span{
    opacity: 0.4;
}
.nav__links_fillers p {
    color: #000;
}
nav ul li{
    transition: filter 0.3s ease;
    list-style: none;
    cursor: pointer;
    /* position: absolute; */
    /* top: 50px; */
}
/* .nav__logo{
    width: 25px;
    height: 25px;

} */
/* .nav__logo img{
    width: 100%;
    height: 100%;
    object-fit: cover;

} */
nav ul li:nth-child(2) {
    font-style: italic;
}

/* .img__nav__wrapper{
    width: 10rem;
    height: 12rem;
    transition: opacity 0.3s ease-in-out;
    background-size: cover;
    background-position: center;
    opacity: 1;
} */
.icon__close{
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.5rem;
}

nav ul:has(li:hover) li:not(:hover) {
    filter: blur(10px);
}
@media screen and (min-width: 320px) and (max-width: 899px) {
    .nav_container{
        padding-inline: 1rem;
    } 
    .nav__ul{
        transform: translateY(-100vh);
    }
}

